# BeamNetworks

./: .gitignore  AUTHORS  README.md  beam_networks.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg
.github/workflows/: doc.yaml  test.yaml
_sources/: modules.rst
beam_networks/: __init__.py  analyze.py  assembly.py  bc.py  fracture.py  geo.py  io.py  network.py  problem.py  solve.py  stiffness.py  stress.py  tesselate.py  utils.py  viz.py
beam_networks/reference_solutions/: cantilever.py
doc/: beam_networks.rst  conf.py  index.rst  readme.rst
examples/bench/: plot_timing_assembly.py  plot_timing_solve.py  run_bench_assembly.py  run_bench_solve.py
examples/finite_defo/: crisfield2d.py  tip_moment.py
examples/first_steps/: cantilever.py  cantilever3d.py  fracture.py  network.py  network2d.py  network3d.py  network3d_noOOP.py  pbc.py  pbc3D.py  poisson_ratio.py
examples/geometry/: generate_stl.py  reflect2D.py
examples/kochmann_database/: octant.py  read_database.py
examples/resources/: hard_disks.txt  triangular.edges  triangular.nodes
maintenance/: HEADER.md  update_coverage.sh  update_coverage_badge.sh  update_license_headers.sh
tests/: jammed.edges  jammed.nodes  test_assembly.py  test_cantilever.py  test_cantilever3d.py  test_derivatives.py  test_examples.py  test_io.py  test_lattice_gen.py  test_remove_dangling.py  test_tesselation.py
tests/test_files/: 2D4-3x3x.json  2D5-3x3x.json  2D6-3x3x.json  acs-3x3x.json  bcc-3x3x3x.json  fcc-3x3x3x.json  lcs-3x3x.json  sc-3x3x3x.json  ss-3x3x.json
