[build-system]
requires = ["flit_core>=3.2", "DiscoverVersion"]
build-backend = "flit_core.buildapi"

[project]
name = "beam_networks"
description = "Solver for Timoshenko beam networks"
readme = "README.md"
authors = [
    { name = "Hannes Holey", email = "hannes.holey@unimi.it" },
    { name = "Stefan Hiemer", email = "stefan.hiemer@unimi.it" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv3"
]

requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "DiscoverVersion",
    "numpy",
    "matplotlib",
    "scipy",
    "tqdm",
    "pandas[hdf5]",
    "trimesh[easy]",
    "meshio",
    "PyYAML"]

[project.optional-dependencies]
tests = [
    'pytest', 
    'coverage']
doc = [
    'sphinx', 
    'sphinx_book_theme']

[project.scripts]
vtk2img = "beam_networks.viz:vtk2img"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
